cluster/apps/netbox/netbox/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: netbox
    namespace: netbox
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:5W5VMJpqWcaOnwkEcfCMvf8kgJULX+PZ505BLSc=,iv:b9IA00fOeZpEUr4eoKIeten47BgjBbqWkF5mPfgrsiI=,tag:k/81rij5mdfM5oYp6W0cCA==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: netbox
                        port:
                            number: 80
    tls:
        - hosts:
            - ENC[AES256_GCM,data:I1ARDe/3GvZeQWoYkb1DRhM5SYIxyD6ZillrF9g=,iv:NBzx1bp+XLN2WIdoPu0zIfFGGowyffJqVuyTcS/GIXo=,tag:yF2A0WkmZuMu+bJqP6TbgQ==,type:str]
          secretName: netbox-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-10-31T02:56:10Z"
    mac: ENC[AES256_GCM,data:uUI1T/Gl94ei5PdxKP5WPgg42EomBIFSNSTY6QCoWeHzAEjnbwq5+qaD4vbWYDdyTky9PVYaG9+1IJUwMDQWVHCaHWMjOVgumg7nUqUmMkF8FXWN1mD8n/V5VUg4Np9l54FFZnU+9ETIzyy2k0WKwR2TVcsv0pxqz+C6mNTDUsU=,iv:5q/cFMrB36vCDTyDBjReUbpwwC1O06yglLbN0Mg89SE=,tag:8MVoRoMfcTsw4W4HQvg5pg==,type:str]
    pgp:
        - created_at: "2021-10-31T02:56:09Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkAQ/9GAT0yo7X8n3DXnKrov9oqixIU846K24/miaU61vvT7Qh
[...]
            =7A20
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP)$
    version: 3.7.1
